cofigurando los dos servidores simultaneamente en local

--- a/server/static/index.html
+++ b/server/static/index.html
@@ -15,15 +15,13 @@ hola
       if (event.wasClean) {
         console.log(`[close] Conexión cerrada limpiamente, código=${event.code} motivo=${event.reason}`);
       } else {
-        // ej. El proceso del servidor se detuvo o la red está caída
-        // event.code es usualmente 1006 en este caso
         console.log('[close] La conexión se cayó');
       }
     };
     
     ws.onerror = function(error) {
       console.log(`[error]`);
-      url = "wss://chat-websocket-hzgo.onrender.com";
+      url = "wss://chat-websocket-hzgo.onrender.com";  // hacerlo rotativo
       wsInit(url);
     };
   }
